🐛 fix link of pub__card hidden by abstract

--- a/_sass/custom/publication.scss
+++ b/_sass/custom/publication.scss
@@ -109,6 +109,8 @@
         top: 0;
         right: 0;
         bottom: 0;
+        z-index: 1;
+        border-radius: 20px;
       }
     }
 
